--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         
         <section class="hero">
             <picture>
-                <source srcset="images/Hero_Mobile.webp" media="(max-width: 576px)">
-                <source srcset="images/Hero_Tablet.webp" media="(max-width: 960px)">
-                <img src="images/Hero_Desktop.webp" alt="">
+                <source width="576" height="576" srcset="images/Hero_Mobile.webp" media="(max-width: 576px)">
+                <source width="960" height="770" srcset="images/Hero_Tablet.webp" media="(max-width: 960px)">
+                <img width="1920" height="893" src="images/Hero_Desktop.webp" alt="">
             </picture>
            
             <div class="hero-content">
@@ -84,7 +84,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr1.webp" alt="product: Penom Case">
+                            <img width="155" height="155" src="images/vr1.webp" alt="product: Penom Case">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Apple</h5>
@@ -98,7 +98,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img src="images/vr2.webp" alt="product: Noise Cancelling Headphone">
+                            <img width="155" height="155" src="images/vr2.webp" alt="product: Noise Cancelling Headphone">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, PS</h5>
@@ -112,7 +112,7 @@
 
                     <div class="product">
                         <div class="product-picture">
-                            <img src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
+                            <img width="155" height="155" src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Oculus</h5>
