Added Lazy Load for Images and Triggering All Product API call when the All Products section comes on screen

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img width="155" height="155" src="images/vr1.webp" alt="product: Penom Case">
+                            <img width="155" height="155" src="images/vr1.webp" alt="product: Penom Case" loading="lazy">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Apple</h5>
@@ -98,7 +98,7 @@
 
                     <div class="product new">
                         <div class="product-picture">
-                            <img width="155" height="155" src="images/vr2.webp" alt="product: Noise Cancelling Headphone">
+                            <img width="155" height="155" src="images/vr2.webp" alt="product: Noise Cancelling Headphone" loading="lazy">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, PS</h5>
@@ -112,7 +112,7 @@
 
                     <div class="product">
                         <div class="product-picture">
-                            <img width="155" height="155" src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6">
+                            <img width="155" height="155" src="images/vr3.webp" alt="product: Canon Digital SLR EOS Rebel T6" loading="lazy">
                         </div>
                         <div class="product-info">
                             <h5 class="categories">Headsets, Oculus</h5>
